Harden MCP token lifecycle and local ACLs